--- a/ds_config.json
+++ b/ds_config.json
@@ -1,11 +1,16 @@
 {
-    "train_micro_batch_size_per_gpu": 4,
-    "gradient_accumulation_steps": "auto",
-    "fp16": {
-      "enabled": "auto"
-    },
-    "zero_optimization": {
-      "stage": 1
+  "train_batch_size": 4,
+  "gradient_accumulation_steps": 1,
+  "fp16": {
+    "enabled": false
+  },
+  "zero_optimization": {
+    "stage": 2
+  },
+  "optimizer": {
+    "type": "AdamW",
+    "params": {
+      "lr": 5e-5
     }
   }
-  
+}
