--- a/ds_config.json
+++ b/ds_config.json
@@ -2,7 +2,7 @@
   "train_batch_size": 4,
   "gradient_accumulation_steps": 1,
   "fp16": {
-    "enabled": false
+    "enabled": true
   },
   "zero_optimization": {
     "stage": 2
