sft llama，但还是跑不起来

--- a/ds_config.json
+++ b/ds_config.json
@@ -1,16 +1,31 @@
 {
-  "train_batch_size": 4,
-  "gradient_accumulation_steps": 1,
+  "train_batch_size": 32, 
+  "train_micro_batch_size_per_gpu": 4,
+  "gradient_accumulation_steps": 8,
+  "steps_per_print": 1000,
+  "optimizer": {
+    "type": "Adam",
+    "params": {
+      "lr": 2e-5,
+      "betas": [0.9, 0.999],
+      "eps": 1e-8,
+      "weight_decay": 0.0
+    }
+  },
   "fp16": {
-    "enabled": true
+    "enabled": true,
+    "loss_scale": 0,
+    "initial_scale_power": 32,
+    "hysteresis": 2,
+    "min_loss_scale": 1
   },
   "zero_optimization": {
-    "stage": 2
-  },
-  "optimizer": {
-    "type": "AdamW",
-    "params": {
-      "lr": 5e-5
-    }
+    "stage": 2,
+    "allgather_partitions": true,
+    "allgather_bucket_size": 2e8,
+    "overlap_comm": true,
+    "reduce_scatter": true,
+    "reduce_bucket_size": 2e8,
+    "contiguous_gradients": true
   }
 }
