qwen1.5 inference and fine tune

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ wandb
 trl
 modelscope
 uvicorn
-
+swanlab
 #evaluation
-git+https://github.com/EleutherAI/lm-evaluation-harness.git
+#git+https://github.com/EleutherAI/lm-evaluation-harness.git
